2010-03-11  Vincent Torri  <doursse at users dot sf dot net>

	* win32/vs8/libdlfcn.vcproj:
	* win32/vs9/libdlfcn.vcproj:
	set supported Windows minimal version

2010-03-11  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	actually, ssize_t is defined with all mingw versions
	but not with vc++. So move it in vc++ part of Evil.h

2010-03-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	add comment

	* win32/vs8/libevil.vcproj:
	clean up Visual Studio output (less useless warnings)
	add missing library

2010-02-28  Vincent Torri  <doursse at users dot sf dot net>

	* remove cegcc compiler support, only mingw32ce
	is supported

	* remove shadow declarations

2010-02-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_unistd.c:
	fix gettimeofday(). Thanks to Mathieu SCHROETER,
	from the GeexBox project, for having spotted this.

2010-01-30  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	verify that the data passed to fcntl() is really a socket
	and fix ioctlsocket() returned value check.

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	add unit test for pipe().

2010-01-30  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	change again the redefinition of open(). Needed
	for the gif loader. But the compilation with vc++
	is certainly broken. Will be fixed later with a specific
	case for vc++.

2010-01-30  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	fix fcntl() with F_SETFL command

2010-01-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	* src/lib/evil_unistd.c:
	make pipe() blocking by default and allow fcntl()
	to set a socket to be non-blocking

	* src/lib/evil_stdlib.c:
	fix warning

2010-01-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	Fix dladdr() on Windows CE: use the calling process